--- a/public/assets/css/now-ui-dashboard.css
+++ b/public/assets/css/now-ui-dashboard.css
@@ -4062,12 +4062,8 @@ Created using IcoMoon - icomoon.io
 
 .sidebar:after,
 .off-canvas-sidebar:after {
-  background: #888;
-  background: -webkit-linear-gradient(#888 0%, #000 80%);
-  background: -o-linear-gradient(#888 0%, #000 80%);
-  background: -moz-linear-gradient(#888 0%, #000 80%);
-  background: linear-gradient(#888 0%, #000 80%);
   z-index: 3;
+  background: linear-gradient(#FF8000, #FFBF00, #FF8000);
 }
 
 .sidebar[data-color="blue"]:after,
